--- a/manifest.plist
+++ b/manifest.plist
@@ -39,9 +39,9 @@
                <key>kind</key>
                <string>software</string>
                <key>subtitle</key>
-               <string>緣起5</string>
+               <string>台灣電話交友5</string>
                <key>title</key>
-               <string>緣起5</string>
+               <string>台灣電話交友5</string>
            </dict>
        </dict>
    </array>
